build/log/idf_py_stdout_output_18875
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/parker/projects/QSPI-Amoled/build/bootloader/esp-idf/esptool_py && /home/parker/.espressif/python_env/idf5.0_py3.8_env/bin/python /home/parker/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/parker/projects/QSPI-Amoled/build/bootloader/bootloader.bin
Bootloader binary size 0x56e0 bytes. 0x2920 bytes (32%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Amoled.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/Amoled.c.obj 
/home/parker/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -Iconfig -I../main -I/home/parker/esp/esp-idf/components/newlib/platform_include -I/home/parker/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/parker/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/parker/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/parker/esp/esp-idf/components/freertos/esp_additions/include -I/home/parker/esp/esp-idf/components/esp_hw_support/include -I/home/parker/esp/esp-idf/components/esp_hw_support/include/soc -I/home/parker/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/parker/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/parker/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/parker/esp/esp-idf/components/heap/include -I/home/parker/esp/esp-idf/components/log/include -I/home/parker/esp/esp-idf/components/soc/include -I/home/parker/esp/esp-idf/components/soc/esp32s3/. -I/home/parker/esp/esp-idf/components/soc/esp32s3/include -I/home/parker/esp/esp-idf/components/hal/esp32s3/include -I/home/parker/esp/esp-idf/components/hal/include -I/home/parker/esp/esp-idf/components/hal/platform_port/include -I/home/parker/esp/esp-idf/components/esp_rom/include -I/home/parker/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/parker/esp/esp-idf/components/esp_rom/esp32s3 -I/home/parker/esp/esp-idf/components/esp_common/include -I/home/parker/esp/esp-idf/components/esp_system/include -I/home/parker/esp/esp-idf/components/esp_system/port/soc -I/home/parker/esp/esp-idf/components/esp_system/port/include/private -I/home/parker/esp/esp-idf/components/xtensa/include -I/home/parker/esp/esp-idf/components/xtensa/esp32s3/include -I/home/parker/esp/esp-idf/components/lwip/include -I/home/parker/esp/esp-idf/components/lwip/include/apps -I/home/parker/esp/esp-idf/components/lwip/include/apps/sntp -I/home/parker/esp/esp-idf/components/lwip/lwip/src/include -I/home/parker/esp/esp-idf/components/lwip/port/esp32/include -I/home/parker/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/parker/esp/esp-idf/components/esp_ringbuf/include -I/home/parker/esp/esp-idf/components/efuse/include -I/home/parker/esp/esp-idf/components/efuse/esp32s3/include -I/home/parker/esp/esp-idf/components/driver/include -I/home/parker/esp/esp-idf/components/driver/deprecated -I/home/parker/esp/esp-idf/components/driver/esp32s3/include -I/home/parker/esp/esp-idf/components/esp_pm/include -I/home/parker/esp/esp-idf/components/mbedtls/port/include -I/home/parker/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/parker/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/parker/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/parker/esp/esp-idf/components/esp_app_format/include -I/home/parker/esp/esp-idf/components/bootloader_support/include -I/home/parker/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/parker/esp/esp-idf/components/esp_partition/include -I/home/parker/esp/esp-idf/components/app_update/include -I/home/parker/esp/esp-idf/components/spi_flash/include -I/home/parker/esp/esp-idf/components/pthread/include -I/home/parker/esp/esp-idf/components/esp_timer/include -I/home/parker/esp/esp-idf/components/app_trace/include -I/home/parker/esp/esp-idf/components/esp_event/include -I/home/parker/esp/esp-idf/components/nvs_flash/include -I/home/parker/esp/esp-idf/components/esp_phy/include -I/home/parker/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/parker/esp/esp-idf/components/vfs/include -I/home/parker/esp/esp-idf/components/esp_netif/include -I/home/parker/esp/esp-idf/components/wpa_supplicant/include -I/home/parker/esp/esp-idf/components/wpa_supplicant/port/include -I/home/parker/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/parker/esp/esp-idf/components/esp_wifi/include -I/home/parker/esp/esp-idf/components/unity/include -I/home/parker/esp/esp-idf/components/unity/unity/src -I/home/parker/esp/esp-idf/components/cmock/CMock/src -I/home/parker/esp/esp-idf/components/console -I/home/parker/esp/esp-idf/components/http_parser -I/home/parker/esp/esp-idf/components/esp-tls -I/home/parker/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/parker/esp/esp-idf/components/esp_adc/include -I/home/parker/esp/esp-idf/components/esp_adc/interface -I/home/parker/esp/esp-idf/components/esp_adc/esp32s3/include -I/home/parker/esp/esp-idf/components/esp_adc/deprecated/include -I/home/parker/esp/esp-idf/components/esp_eth/include -I/home/parker/esp/esp-idf/components/esp_gdbstub/include -I/home/parker/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/parker/esp/esp-idf/components/esp_gdbstub/esp32s3 -I/home/parker/esp/esp-idf/components/esp_hid/include -I/home/parker/esp/esp-idf/components/tcp_transport/include -I/home/parker/esp/esp-idf/components/esp_http_client/include -I/home/parker/esp/esp-idf/components/esp_http_server/include -I/home/parker/esp/esp-idf/components/esp_https_ota/include -I/home/parker/esp/esp-idf/components/esp_lcd/include -I/home/parker/esp/esp-idf/components/esp_lcd/interface -I/home/parker/esp/esp-idf/components/protobuf-c/protobuf-c -I/home/parker/esp/esp-idf/components/protocomm/include/common -I/home/parker/esp/esp-idf/components/protocomm/include/security -I/home/parker/esp/esp-idf/components/protocomm/include/transports -I/home/parker/esp/esp-idf/components/esp_local_ctrl/include -I/home/parker/esp/esp-idf/components/esp_psram/include -I/home/parker/esp/esp-idf/components/espcoredump/include -I/home/parker/esp/esp-idf/components/espcoredump/include/port/xtensa -I/home/parker/esp/esp-idf/components/wear_levelling/include -I/home/parker/esp/esp-idf/components/sdmmc/include -I/home/parker/esp/esp-idf/components/fatfs/diskio -I/home/parker/esp/esp-idf/components/fatfs/vfs -I/home/parker/esp/esp-idf/components/fatfs/src -I/home/parker/esp/esp-idf/components/idf_test/include -I/home/parker/esp/esp-idf/components/idf_test/include/esp32s3 -I/home/parker/esp/esp-idf/components/ieee802154/include -I/home/parker/esp/esp-idf/components/json/cJSON -I/home/parker/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/parker/esp/esp-idf/components/perfmon/include -I/home/parker/esp/esp-idf/components/spiffs/include -I/home/parker/esp/esp-idf/components/touch_element/include -I/home/parker/esp/esp-idf/components/ulp/ulp_common/include -I/home/parker/esp/esp-idf/components/ulp/ulp_common/include/esp32s3 -I/home/parker/esp/esp-idf/components/usb/include -I/home/parker/esp/esp-idf/components/wifi_provisioning/include -mlongcalls  -g   -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/parker/projects/QSPI-Amoled=. -fmacro-prefix-map=/home/parker/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/Amoled.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/Amoled.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/Amoled.c.obj   -c ../main/Amoled.c
../main/Amoled.c: In function 'Write_Disp_Data':
../main/Amoled.c:131:9: error: implicit declaration of function 'QSPI_WriteData'; did you mean 'SPI_WriteData'? [-Werror=implicit-function-declaration]
  131 |         QSPI_WriteData(val>>8);
      |         ^~~~~~~~~~~~~~
      |         SPI_WriteData
../main/Amoled.c: At top level:
../main/Amoled.c:136:6: warning: conflicting types for 'QSPI_WriteData'; have 'void(uint16_t)' {aka 'void(short unsigned int)'}
  136 | void QSPI_WriteData(uint16_t val)
      |      ^~~~~~~~~~~~~~
../main/Amoled.c:131:9: note: previous implicit declaration of 'QSPI_WriteData' with type 'void(uint16_t)' {aka 'void(short unsigned int)'}
  131 |         QSPI_WriteData(val>>8);
      |         ^~~~~~~~~~~~~~
../main/Amoled.c: In function 'DM_Clear':
../main/Amoled.c:214:9: error: implicit declaration of function 'DM_block_write' [-Werror=implicit-function-declaration]
  214 |         DM_block_write(0,COL-1,0,ROW-1);
      |         ^~~~~~~~~~~~~~
../main/Amoled.c:219:9: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
  219 |         for(i=0;i<COL;i++)
      |         ^~~
../main/Amoled.c:40:21: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'for'
   40 | #define SPI_CS1     gpio_set_level(LCD_CS, 1)
      |                     ^~~~~~~~~~~~~~
../main/Amoled.c:225:17: note: in expansion of macro 'SPI_CS1'
  225 |                 SPI_CS1;
      |                 ^~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
